--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@ nav ul li {
     
 <nav>
         <div class="row">
+             <div class="col-sm-3 col-md-3">
+            </div>
             <div class="col-md-9 col-sm-9">
                 <ul>
                     <li><a href="#">HOME</a></li>
