--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 nav ul li {
   display: inline-block;
   font-size: 60%;
-  margin-right: 0;
+  margin-right: 10px;
   border: 1px solid yellow;
  
  }  
